Fix style for langugae switcher box shadow on iOS.

--- a/assets/front.css
+++ b/assets/front.css
@@ -104,8 +104,8 @@ body {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 100%;
-	height: 100%;
+	width: 35px;
+	height: 35px;
 	border-radius: 50%;
 	box-shadow: 0 0 5px 1px var(--dsl-main-color);
 	opacity: 0;
